--- a/my-react-app/src/styles/pages/_about.scss
+++ b/my-react-app/src/styles/pages/_about.scss
@@ -51,6 +51,11 @@
   align-items: center;
   gap: 20px;
   margin-bottom: 20px;
+  @media (min-width: 902px) {
+    max-width: 82.5%;
+    margin: auto;
+}
+
 }
 
 // ----------- Collapse component -------------
@@ -59,6 +64,7 @@
   width: 100%;
   background-color: vars.$color__white;
   border-radius: 6px;
+
 }
 
 .collapse-toggle {
@@ -99,8 +105,13 @@
 
 .collapse-content {
   overflow: hidden;
-  transition: max-height 0.3s ease-in-out, padding 0.3s ease-in-out;
+  transition: max-height 0.5s ease-in-out;
   background-color: vars.$color_gray;
+  max-height: 0;
+}
+
+.collapse-content.open {
+  max-height: 1000px; /* Fixed value that's taller than your content */
 }
 
 .collapse-inner {
