--- a/my-react-app/src/styles/pages/_home.scss
+++ b/my-react-app/src/styles/pages/_home.scss
@@ -90,7 +90,7 @@
         width: 100%;
         height: 100%;
         max-height: 21.25rem;
-        min-height: 16rem;
+        min-height: 21.25rem;
         border-radius: 1.5rem;
         transition: transform 0.05s ease-in;
         transition: box-shadow 0.05s ease-in;
@@ -131,8 +131,8 @@
     .cards__img{
         width: 100%;
         height: 100%;
-        max-height: 16rem;
-        min-height: 16rem;
+        max-height: 21.25rem;
+        min-height: 21.25rem;
         border-radius: 1.5rem;
         position: relative;
         object-fit: cover;
